--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Savate:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <title>Umar's Portfolio</title>
+    <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <!--Navbar-->
-<nav class="navbar navbar-expand-lg bg-body-primary bg-primary bg-gradient text sticky-top" style="--bs-bg-opacity: 100%">
+<nav class="navbar navbar-expand-lg bg-body-primary text sticky-top" id="navbar" >
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -106,10 +106,10 @@
 
  <!-- projects section -->
   <h1 class="display-4 fw-normal text-body-emphasis mb-4" style="text-align: center;" id="myPorject">Projects</h1>
-<div class="container"id="projects">
-  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+<div class="container py-3" id="projects">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 mb-3 text-center">
     <div class="col d-flex align-items-stretch">
-      <div class="card mb-4 rounded-3 shadow-sm border-primary h-100">
+      <div class="card h-100 mb-4 rounded-3 shadow-sm">
         <div class="card-header py-3 text-bg-primary border-primary">
           <h4 class="my-0 fw-normal">TinDog</h4>
         </div>
@@ -120,7 +120,7 @@
       </div>
     </div>
     <div class="col d-flex align-items-stretch">
-      <div class="card mb-4 rounded-3 shadow-sm border-primary h-100">
+      <div class="card h-100 mb-4 rounded-3 shadow-sm">
         <div class="card-header py-3 text-bg-primary border-primary">
           <h4 class="my-0 fw-normal">Calculator</h4>
         </div>
@@ -131,7 +131,7 @@
       </div>
     </div>
     <div class="col d-flex align-items-stretch">
-      <div class="card mb-4 rounded-3 shadow-sm border-primary h-100">
+      <div class="card h-100 mb-4 rounded-3 shadow-sm border-primary">
         <div class="card-header py-3 text-bg-primary border-primary">
           <h4 class="my-0 fw-normal">Weather App</h4>
         </div>
@@ -147,16 +147,20 @@
 <!-- footer -->
  <div class="contact-me" id="contact-me">
          <h1 class="display-4 fw-normal text-body-emphasis mb-4" style="text-align: center;" >Get in Touch</h1>
-        <h3 class="contact-message">I'm open for work opportunities, collaborations, or just a friendly chat. Feel free to reach out!</h3>
+        <h3 class=" fs-2">I'm open for work opportunities, collaborations, or just a friendly chat. Feel free to reach out!</h3>
         <a class="btn btn-lg btn-primary" href="mailto:uu0339843@gmail.com">CONTACT ME</a>
       </div>
-<div class="myinfo bg-primary-subtle">
+<div class="myinfo">
       <footer class="py-3 mt-4">
-         <ul class="nav justify-content-center border-bottom pb-3 mb-3 bg-body-primary bg-gradient">
+         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
            <li class="nav-item">
-            <a href="https://www.linkedin.com/in/umar-abdullah-718169293/" class="nav-link px-2 text-body-secondary">Linkedin</a></li>
-             <li class="nav-item"><a href="https://github.com/UmarAbdullah79" class="nav-link px-2 text-body-secondary">GitHub</a></li> 
-          </ul> <p class="text-center text-body-secondary">© Call 9047812365</p> </footer>
+            <a href="https://www.linkedin.com/in/umar-abdullah-718169293/" class="nav-link px-2">Linkedin</a>
+          </li>
+             <li class="nav-item">
+              <a href="https://github.com/UmarAbdullah79" class="nav-link px-2">GitHub</a>
+            </li> 
+          </ul> <p class="text-center">© Call 9047812365</p>
+         </footer>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
