--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Savate:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Savate:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <!--Navbar-->
-<nav class="navbar navbar-expand-lg bg-body-primary text sticky-top" id="navbar" >
+<nav class="navbar navbar-expand-lg bg-body-primary bg-primary bg-gradient text sticky-top" style="--bs-bg-opacity: 100%">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -66,6 +66,7 @@
                       <h3 class="fs-2 text-body-emphasis">Skills</h3> 
                       <ul class="fs-4">
                         <li><strong>Frontend</strong> - HTML, CSS, JavaScript, Bootstrap.</li>
+                        <li><strong>Backend</strong> - jQuery, Node js, Express Js, Postman.</li>
                         <li><strong>Version Control</strong> - Git, GitHub.</li>
                         <li><strong>Soft Skills</strong> - Problem-solving, Communication, Fast Learner. </li>
                         <li><strong>Currently learning</strong> - Full Stack Development (MERN).</li>
@@ -111,33 +112,35 @@
     <div class="col d-flex align-items-stretch">
       <div class="card h-100 mb-4 rounded-3 shadow-sm">
         <div class="card-header py-3 text-bg-primary border-primary">
-          <h4 class="my-0 fw-normal">TinDog</h4>
+          <h4 class="my-0 fw-normal">Simon Game</h4>
         </div>
         <div class="card-body d-flex flex-column">
-          <h4>It is tinder like websites for DOGs</h4>
-          <button type="button" class="w-100 btn btn-lg btn-primary mt-auto">Open</button>
+          <h4>A web-based version of the classic "Simon Says" memory game. The computer generates a sequence of colors, and the user must remember and repeat the pattern in the correct order. With each round, the sequence becomes longer and more challenging.
+              Built with: HTML, CSS, JavaScript, jQuery</h4>
+          <button type="button" class="w-100 btn btn-lg btn-primary mt-auto" onclick="window.open('https://umarabdullah79.github.io/Simon-Game/')">Open</button>
         </div>
       </div>
     </div>
     <div class="col d-flex align-items-stretch">
       <div class="card h-100 mb-4 rounded-3 shadow-sm">
         <div class="card-header py-3 text-bg-primary border-primary">
-          <h4 class="my-0 fw-normal">Calculator</h4>
+          <h4 class="my-0 fw-normal">Password Generator</h4>
         </div>
         <div class="card-body d-flex flex-column">
-          <h4>Its a Simple Calculator made up of HTML, CSS, JavaScript and React</h4>
-          <button type="button" class="w-100 btn btn-lg btn-primary mt-auto">Open</button>
+          <h4>A simple tool that generates secure, random passwords based on user-selected options such as length, inclusion of uppercase letters, numbers, and special characters. It helps users quickly create strong passwords for better online security. Built with: HTML, CSS, JavaScript</h4></h4>
+          <button type="button" class="w-100 btn btn-lg btn-primary mt-auto" onclick="window.open('https://umarabdullah79.github.io/Random-Password-Generator/')">Open</button>
         </div>
       </div>
     </div>
     <div class="col d-flex align-items-stretch">
       <div class="card h-100 mb-4 rounded-3 shadow-sm border-primary">
         <div class="card-header py-3 text-bg-primary border-primary">
-          <h4 class="my-0 fw-normal">Weather App</h4>
+          <h4 class="my-0 fw-normal">Drum Kit</h4>
         </div>
         <div class="card-body d-flex flex-column">
-          <h4>A simple weather app with the help of weather API.</h4>
-          <button type="button" class="w-100 btn btn-lg btn-primary mt-auto">Open</button>
+          <h4>An interactive web app that lets users play different drum sounds by clicking on buttons or pressing specific keys on the keyboard. It’s a fun way to explore sound effects and engage with a simple musical interface.
+Built with: HTML, CSS, JavaScript</h4>
+          <button type="button" class="w-100 btn btn-lg btn-primary mt-auto" onclick="window.open('https://umarabdullah79.github.io/Drum-Kit/')">Open</button>
         </div>
       </div>
     </div>
