--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@
     <div class="col d-flex align-items-stretch">
       <div class="card h-100 mb-4 rounded-3 shadow-sm">
         <div class="card-header py-3 text-bg-primary border-primary">
-          <h4 class="my-0 fw-normal">Password Generator</h4>
+          <h4 class="my-0 fw-normal">BLOG API project</h4>
         </div>
         <div class="card-body d-flex flex-column">
-          <h4>A simple tool that generates secure, random passwords based on user-selected options such as length, inclusion of uppercase letters, numbers, and special characters. It helps users quickly create strong passwords for better online security. Built with: HTML, CSS, JavaScript</h4></h4>
-          <button type="button" class="w-100 btn btn-lg btn-primary mt-auto" onclick="window.open('https://umarabdullah79.github.io/Random-Password-Generator/')">Open</button>
+          <h4>A dynamic blog platform where users can create, edit, and delete posts. Built using a RESTful API with JSON for data handling, it features server-side rendering with EJS templates and handles requests using Express.js and Node.js. This project demonstrates CRUD operations and basic backend integration.
+Built with: JavaScript, Express.js, Node.js, EJS, JSON, REST API</h4></h4>
+          <button type="button" class="w-100 btn btn-lg btn-primary mt-auto" onclick="window.open('https://blog-frontend-production-bce0.up.railway.app/')">Open</button>
         </div>
       </div>
     </div>
